# libmw-core

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: fmtlib.cmake
include/mw/: ChildProcess.h  Lock.h
include/mw/common/: ChildProcess.h  Lock.h  Logger.h  filesystem.h
include/mw/core/: Context.h
include/mw/core/common/: ChildProcess.h  ImportExport.h  Lock.h  Logger.h  Scheduler.h  Secure.h  ThreadManager.h
include/mw/core/config/: Config.h
include/mw/core/consensus/: CutThroughVerifier.h  KernelSignatureValidator.h  KernelSumValidator.h  TransactionValidator.h
include/mw/core/crypto/: Crypto.h  Random.h  secp256k1.h
include/mw/core/db/: BlockDB.h  IBlockDB.h
include/mw/core/exceptions/: CryptoException.h  DatabaseException.h  DeserializationException.h  FileException.h  GrinException.h  NetworkException.h  ProcessException.h  UnimplementedException.h  ValidationException.h
include/mw/core/file/: AppendOnlyFile.h  BitmapFile.h  File.h  FileHelper.h  FilePath.h  FileRemover.h  MemMap.h
include/mw/core/mmr/: Backend.h  Index.h  Leaf.h  LeafIndex.h  LeafSet.h  MMR.h  Node.h
include/mw/core/mmr/backends/: FileBackend.h  VectorBackend.h
include/mw/core/models/: ShortId.h
include/mw/core/models/block/: Block.h  CompactBlock.h  Header.h  IBlock.h  IHeader.h  ShortId.h
include/mw/core/models/crypto/: Bech32Address.h  BigInteger.h  BlindingFactor.h  BulletProofType.h  Commitment.h  Hash.h  ProofMessage.h  PublicKey.h  RangeProof.h  RewoundProof.h  ScryptParameters.h  SecretKey.h  Signature.h
include/mw/core/models/net/: IPAddress.h  SocketAddress.h
include/mw/core/models/net/rpc/: Error.h  Id.h  Request.h  Response.h
include/mw/core/models/tx/: Features.h  IKernel.h  Input.h  Kernel.h  Output.h  Transaction.h  TxBody.h  UTXO.h
include/mw/core/net/: Socket.h
include/mw/core/net/proxy/: Proxy.h  SOCKS.h  Socks5Proxy.h
include/mw/core/net/servers/: HttpServer.h  Server.h
include/mw/core/serialization/: ByteBuffer.h  Deserializer.h  Json.h  Serializer.h
include/mw/core/traits/: Batchable.h  Committed.h  Hashable.h  Jsonable.h  Serializable.h
include/mw/core/util/: BitUtil.h  EndianUtil.h  FileUtil.h  HexUtil.h  StringUtil.h  ThreadUtil.h
include/mw/crypto/: Crypto.h  Random.h
include/mw/exceptions/: CryptoException.h  DeserializationException.h  GrinException.h  ProcessException.h  UnimplementedException.h
include/mw/models/: Block.h  BlockHeader.h  CompactBlock.h  ShortId.h  Transaction.h
include/mw/models/block/: Block.h  CompactBlock.h  Header.h
include/mw/models/crypto/: BigInteger.h  BlindingFactor.h  Commitment.h  Hash.h  ProofMessage.h  PublicKey.h  RangeProof.h  ScryptParameters.h  SecretKey.h  Signature.h
include/mw/models/net/: IPAddress.h
include/mw/models/tx/: Features.h  Input.h  Kernel.h  Output.h  Transaction.h  TxBody.h
include/mw/serialization/: ByteBuffer.h  Json.h  Serializer.h
include/mw/traits/: Committed.h  Hashable.h  Jsonable.h  Serializable.h
include/mw/util/: EndianUtil.h  FileUtil.h  HexUtil.h  StringUtil.h
src/: core.cmake
src/common/: CMakeLists.txt  LoggerImpl.cpp  LoggerImpl.h  ThreadManagerImpl.cpp  ThreadManagerImpl.h
src/crypto/: AggSig.cpp  AggSig.h  Bulletproofs.cpp  Bulletproofs.h  BulletproofsCache.h  CMakeLists.txt  CommitmentUtil.h  Context.h  ConversionUtil.cpp  ConversionUtil.h  Crypto.cpp  Pedersen.cpp  Pedersen.h  PublicKeys.cpp  PublicKeys.h
src/db/: BlockDB.cpp  BlockDB.h  CMakeLists.txt  ChainStore.h
src/db/common/: DBEntry.h  DBLogger.h  DBTable.h  DBTransaction.h  Database.h
src/file/: CMakeLists.txt  File.cpp
src/mmr/: CMakeLists.txt  Index.cpp  LeafSet.cpp  MMR.cpp
src/net/: CMakeLists.txt  Socket.cpp
src/net/proxy/: Socks5Proxy.cpp
src/traits/: CMakeLists.txt  Serializable.cpp
tests/: CMakeLists.txt  TestMain.cpp  Test_ChildProcess.cpp
tests/common/: CMakeLists.txt  Test_FilePath.cpp  Test_Scheduler.cpp
tests/crypto/: CMakeLists.txt  Test_AddCommitments.cpp  Test_AggSig.cpp
tests/db/: CMakeLists.txt  Test_Database.cpp
tests/file/: CMakeLists.txt  TestUtil.h  Test_BitmapFile.cpp
tests/mmr/: CMakeLists.txt  Test_FileBackend.cpp  Test_Index.cpp  Test_LeafIndex.cpp  Test_MMR.cpp
tests/models/: CMakeLists.txt  Test_Block.cpp  Test_BlockHeader.cpp
tests/models/block/: Test_Block.cpp  Test_BlockHeader.cpp  Test_Header.cpp
tests/models/crypto/: Test_BigInteger.cpp
tests/models/net/: Test_IPAddress.cpp
tests/models/net/rpc/: Test_Error.cpp  Test_Id.cpp  Test_Request.cpp  Test_Response.cpp
tests/models/tx/: Test_Input.cpp
tests/net/: CMakeLists.txt
tests/net/proxy/: Test_Socks5Proxy.cpp
tests/net/servers/: Test_Server.cpp
tests/serialization/: CMakeLists.txt  Test_Deserializer.cpp  Test_Json.cpp  Test_Serializer.cpp
tests/util/: CMakeLists.txt  Test_BitUtil.cpp
tmp/: libmw-core-cfgcmd.txt
